--- a/src/main/resources/templates/user_list.html
+++ b/src/main/resources/templates/user_list.html
@@ -32,7 +32,7 @@
 				</tbody>
 			</table>
 			<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-				<a href="/admin/username/0"><button class="btn btn-primary">Agregar</button></a>
+				<a href="/admin/user/0"><button class="btn btn-primary">Agregar</button></a>
 			</div>
 		</div>
 	</div>
